--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
     "formik": "^2.2.8",
+    "gh-pages": "^3.2.0",
     "notistack": "^1.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -34,7 +35,9 @@
     "start": "react-scripts start --env-file=.env start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build -r https://$GH_TOKEN@github.com/miguelmorales13/movies-api-omdb"
   },
   "eslintConfig": {
     "extends": [
