--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "e-comerse-admin",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://miguelmorales13.github.io/e-commers-admin",
+  "homepage": "https://miguelmorales13.github.io/e-commers-admin/",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -44,7 +44,9 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+    }
   },
   "browserslist": {
     "production": [
