--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
@@ -61,7 +63,5 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.16",
-    "@types/react-router-dom": "^5.1.7"
   }
 }
